Changed distribution management from sonatype to github packages

--- a/.github/workflows/call-buildimage.yaml
+++ b/.github/workflows/call-buildimage.yaml
@@ -20,3 +20,6 @@ jobs:
     with:
       java-version: 11
     secrets: inherit
+
+
+    # TODO: Husk å legge til push til maven central/sonatype om det fremdeles skal være aktuelt.
