--- a/.github/workflows/call-buildimage.yaml
+++ b/.github/workflows/call-buildimage.yaml
@@ -19,6 +19,7 @@ jobs:
     uses: felleslosninger/github-workflows/.github/workflows/ci-maven-install-deploy-lib.yml@efm-tilpasninger-2
     with:
       java-version: 8
+      sbom-path: .
     secrets: inherit
 
 
