--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,106 @@
         </developer>
     </developers>
 
+
+    <profiles>
+        <profile>
+            <id>old-platform-distribution</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>!new-platform</name> <!-- Activate if 'new-platform' property is not set -->
+                </property>
+            </activation>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                </snapshotRepository>
+                <repository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+            <repositories>
+                <repository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                </repository>
+                <repository>
+                    <id>MavenArtifactFeed</id>
+                    <url>https://pkgs.dev.azure.com/dificloud/_packaging/MavenArtifactFeed/maven/v1</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                </repository>
+                <repository>
+                    <id>Jsch</id>
+                    <url>http://jsch.sf.net/maven2/</url>
+                </repository>
+            </repositories>
+        </profile>
+        <profile>
+            <id>new-platform-distribution</id>
+            <activation>
+                <property>
+                    <name>new-platform</name> <!-- Activate if 'new-platform' property is set -->
+                </property>
+            </activation>
+            <distributionManagement>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub felleslosninger Apache Maven Packages</name>
+                    <url>https://maven.pkg.github.com/felleslosninger/efm-service-registry</url>
+                </repository>
+                <snapshotRepository>
+                    <id>github</id>
+                    <url>https://maven.pkg.github.com/felleslosninger/efm-service-registry</url>
+                </snapshotRepository>
+            </distributionManagement>
+
+            <repositories>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub felleslosninger Apache Maven Packages</name>
+                    <url>https://maven.pkg.github.com/felleslosninger/*</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+                <repository>
+                    <id>jitpack.io</id>
+                    <url>https://jitpack.io</url>
+                </repository>
+                <repository>
+                    <id>MavenArtifactFeed</id>
+                    <url>https://pkgs.dev.azure.com/dificloud/_packaging/MavenArtifactFeed/maven/v1</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                </repository>
+                <repository>
+                    <id>Jsch</id>
+                    <url>http://jsch.sf.net/maven2/</url>
+                </repository>
+            </repositories>
+        </profile>
+    </profiles>
+
     <distributionManagement>
         <repository>
             <id>github</id>
