--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
             </build>
         </profile>
         <profile>
-            <id>new-platform-distribution</id>
+            <id>new-platform</id>
             <activation>
                 <property>
                     <name>new-platform</name> <!-- Activate if 'new-platform' property is set -->
