--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
             </repositories>
         </profile>
         <profile>
-            <id>old-platform-distribution</id>
+            <id>ossrh</id>
             <distributionManagement>
                 <snapshotRepository>
                     <id>ossrh</id>
