--- a/.github/workflows/call-buildimage.yaml
+++ b/.github/workflows/call-buildimage.yaml
@@ -15,7 +15,7 @@ on:
     branches:
       - '*'
   pull_request:
-    types: [ ]  # Empty list ensures PRs are not triggered. Trigger nytt bygg..
+    types: [ ]  # Empty list ensures PRs are not triggered. Trigger nytt bygg.
 
 jobs:
 
