--- a/pom.xml
+++ b/pom.xml
@@ -66,21 +66,9 @@
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!-- FIXME below could be configured elsewhere -->
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <maven.compiler.release>21</maven.compiler.release>
-        <spring.cloud.version>2022.0.0</spring.cloud.version>
-        <commons-lang.version>3.14.0</commons-lang.version>
-        <xmlsec.version>3.0.3</xmlsec.version>
-        <nimbus.jwt.version>9.48</nimbus.jwt.version>
-        <guava.version>32.1.3-jre</guava.version>
-        <xstream.version>1.4.20</xstream.version>
-        <bouncycastle.version>1.77</bouncycastle.version>
+        <bouncycastle.version>1.78.1</bouncycastle.version>
         <commons-asic.version>1.0.0-SNAPSHOT</commons-asic.version>
         <spring-security-oauth.version>2.5.2.RELEASE</spring-security-oauth.version>
-        <!-- to do check this ^ for deprication https://github.com/spring-attic/spring-security-oauth/blob/main/README.md -->
-        <snakeyaml.version>2.3</snakeyaml.version>
     </properties>
 
     <modules>
@@ -194,63 +182,53 @@
                 <!-- erstatning for sårbar avhengighet i com.microsoft.azure:adal4j:1.6.7 -->
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>2.8.9</version>
+                <version>2.12.1</version>
             </dependency>
-            <dependency>
-                <!-- erstatning for sårbar avhengighet i com.microsoft.azure:adal4j:1.6.7 -->
-                <groupId>org.testng</groupId>
-                <artifactId>testng</artifactId>
-                <version>7.5.1</version>
-                <scope>test</scope>
-            </dependency>
-
             <dependency>
                 <groupId>net.logstash.logback</groupId>
                 <artifactId>logstash-logback-encoder</artifactId>
-                <version>4.9</version>
+                <version>8.0</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.retry</groupId>
                 <artifactId>spring-retry</artifactId>
-                <version>1.3.4</version>
+                <version>2.0.11</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>2.18.0</version>
             </dependency>
-
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>${guava.version}</version>
+                <version>33.4.0-jre</version>
             </dependency>
             <dependency>
                 <groupId>com.nimbusds</groupId>
                 <artifactId>nimbus-jose-jwt</artifactId>
-                <version>${nimbus.jwt.version}</version>
+                <version>10.0.1</version>
             </dependency>
-
             <dependency>
                 <groupId>org.apache.santuario</groupId>
                 <artifactId>xmlsec</artifactId>
-                <version>${xmlsec.version}</version>
+                <version>3.0.5</version>
             </dependency>
             <!-- See https://better-coding.com/solved-org-w3c-dom-domexception-wrong_document_err/ -->
             <dependency>
                 <groupId>org.apache.wss4j</groupId>
                 <artifactId>wss4j-ws-security-dom</artifactId>
-                <version>2.4.1</version>
+                <version>3.0.4</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang.version}</version>
+                <version>3.17.0</version>
             </dependency>
             <dependency>
                 <groupId>com.thoughtworks.xstream</groupId>
                 <artifactId>xstream</artifactId>
-                <version>${xstream.version}</version>
+                <version>1.4.21</version>
             </dependency>
             <dependency>
                 <groupId>org.bouncycastle</groupId>
@@ -278,13 +256,12 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-crypto</artifactId>
-                <version>5.8.8</version>
+                <version>6.4.2</version>
             </dependency>
-
             <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
-                <version>${snakeyaml.version}</version>
+                <version>2.3</version>
             </dependency>
             <dependency>
                 <!-- https://github.com/klakegg/pkix-ocsp -->
@@ -319,7 +296,14 @@
             <dependency>
                 <groupId>com.github.tomakehurst</groupId>
                 <artifactId>wiremock-jre8</artifactId>
-                <version>2.35.1</version>
+                <version>2.35.2</version>
+                <scope>test</scope>
+            </dependency>
+            <!-- erstatning for sårbar avhengighet i com.microsoft.azure:adal4j:1.6.7 -->
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>7.10.2</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -328,16 +312,25 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <release>${java.version}</release>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>8.4.0</version>
+                <version>12.0.2</version>
                 <configuration>
                     <format>HTML</format>
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
+                <version>3.1.1</version>
                 <configuration>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                     <releaseProfiles>release</releaseProfiles>
@@ -346,14 +339,14 @@
                     <dependency>
                         <groupId>org.apache.maven.scm</groupId>
                         <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.9.5</version>
+                        <version>2.1.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.3.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -366,7 +359,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.11.2</version>
                 <executions>
                     <execution>
                         <id>attach-javadoc</id>
@@ -393,7 +386,6 @@
                     <url>https://maven.pkg.github.com/felleslosninger/efm-common</url>
                 </snapshotRepository>
             </distributionManagement>
-
             <repositories>
                 <repository>
                     <id>github</id>
@@ -449,7 +441,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>3.2.7</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
