--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,8 @@
     </parent>
 
     <scm>
-        <connection>scm:git:https://github.com/felleslosninger/efm-common</connection>
-        <developerConnection>scm:git:https://github.com/felleslosninger/efm-common</developerConnection>
-        <url>https://github.com/felleslosninger/efm-common</url>
-        <tag>v2.0.0</tag>
+        <developerConnection>scm:git:git@github.com:felleslosninger/*</developerConnection>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
