--- a/pom.xml
+++ b/pom.xml
@@ -294,11 +294,19 @@
                 <version>${bouncycastle.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.wiremock</groupId>
+                <artifactId>wiremock-standalone</artifactId>
+                <version>3.10.0</version>
+                <scope>test</scope>
+            </dependency>
+            <!--
+            <dependency>
                 <groupId>com.github.tomakehurst</groupId>
                 <artifactId>wiremock-jre8</artifactId>
                 <version>2.35.2</version>
                 <scope>test</scope>
             </dependency>
+            -->
             <!-- erstatning for sårbar avhengighet i com.microsoft.azure:adal4j:1.6.7 -->
             <dependency>
                 <groupId>org.testng</groupId>
