--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:felleslosninger/*</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v2.0.0</tag>
     </scm>
 
     <licenses>
