--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <commons-asic.version>1.0.0-SNAPSHOT</commons-asic.version>
+        <commons-asic.version>1.0.0</commons-asic.version>
     </properties>
 
     <modules>
