--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>no.difi.move-common</groupId>
     <artifactId>parent</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
     <packaging>pom</packaging>
     <name>Move-common</name>
 
@@ -270,7 +270,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:felleslosninger/efm-common</developerConnection>
-        <tag>2.0.1</tag>
+        <tag>2.0.2</tag>
     </scm>
 
     <profiles>
