--- a/annotation/pom.xml
+++ b/annotation/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>no.difi.move-common</groupId>
         <artifactId>parent</artifactId>
-        <version>2.0.2</version>
+        <version>2.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>annotation</artifactId>
