--- a/pom.xml
+++ b/pom.xml
@@ -249,7 +249,7 @@
         </repository>
         <repository>
             <id>github</id>
-            <url>https://maven.pkg.github.com/felleslosninger/efm-common</url>
+            <url>https://maven.pkg.github.com/felleslosninger/*</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
