--- a/properties/pom.xml
+++ b/properties/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>no.difi.move-common</groupId>
         <artifactId>parent</artifactId>
-        <version>2.0.3</version>
+        <version>2.0.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>properties</artifactId>
